Add DMP skeleton.

--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,24 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: deBridge Messaging Protocol
+description: "deBridge Messaging Protocol documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+Culpa nostrud consequat in id dolor occaecat laboris velit. Adipisicing in labore est Lorem quis esse aute officia dolore cupidatat. Magna commodo excepteur cupidatat do amet ad aliqua occaecat eu aute excepteur non esse laborum.
 
-## Setting up
+Elit ea officia duis consectetur culpa occaecat voluptate aliquip ex est non pariatur. Exercitation ut deserunt aute eiusmod occaecat ipsum culpa sit pariatur magna ut velit. Magna est aliqua sint cillum ullamco elit ad. Veniam ex aliquip deserunt nisi minim pariatur culpa. Ex fugiat adipisicing incididunt id aliqua anim id et commodo occaecat esse culpa cupidatat. Mollit irure incididunt aliquip consectetur esse.
 
-The first step to world-class documentation is setting up your editing environments.
+Nulla incididunt ex velit laborum amet cupidatat exercitation nisi ad nisi pariatur cillum. Adipisicing aliquip sint anim fugiat incididunt anim. Mollit pariatur in minim minim officia deserunt minim officia reprehenderit cupidatat culpa ipsum est. Amet ea amet reprehenderit laboris commodo aliqua ad qui esse minim ex. Laborum et sint id nostrud non ea mollit. Commodo enim enim exercitation in occaecat qui officia nulla adipisicing.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+Mollit laboris excepteur laboris laborum ad occaecat esse eu ad incididunt consequat et mollit. Dolor nulla sit velit tempor officia laboris culpa enim aliquip nisi proident Lorem. Nulla labore consequat do pariatur aliqua. Consectetur ex laborum amet ea dolore est enim id ea est duis sit amet sint. Sit veniam eu incididunt exercitation do laboris aute. Voluptate commodo incididunt ex duis velit adipisicing tempor.
 
-## Make it yours
+Mollit eu et in fugiat amet laborum ipsum sunt ad sit laboris proident. Ipsum ut occaecat laboris proident excepteur culpa velit. Sit voluptate mollit adipisicing et elit commodo aute amet. Pariatur ad non enim nostrud excepteur ut aute veniam proident sunt magna tempor sunt dolor. Velit excepteur fugiat ut sint ad ea ullamco. Cillum non esse anim labore in magna adipisicing minim ad. Veniam nostrud cillum esse fugiat eu irure irure fugiat laborum consequat.
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Aliquip aute ex enim sit non officia et anim. Dolor dolor culpa laborum occaecat. Cupidatat laborum officia pariatur do ullamco pariatur cillum laborum sit ipsum. Anim nisi anim labore voluptate consequat in dolor mollit enim id quis sunt. Labore minim nostrud veniam duis nostrud officia commodo deserunt veniam Lorem occaecat.
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+Velit mollit fugiat id quis nulla Lorem elit laboris aliquip Lorem ut dolore deserunt sit. Consequat id in cillum sit ut est eu enim nulla sit ipsum magna pariatur do. Culpa fugiat velit tempor ad mollit occaecat do ad minim.
+
+Anim sit deserunt exercitation eiusmod culpa sunt exercitation quis labore anim duis ex non exercitation. Excepteur dolor ipsum eiusmod laboris cupidatat ex do cupidatat nisi culpa cillum. Laboris exercitation ipsum reprehenderit non consequat officia. Eu cillum elit magna laboris labore est nulla officia excepteur nulla tempor incididunt et elit. Occaecat duis irure veniam ea irure sunt excepteur qui.
+
+In mollit magna et Lorem ipsum laborum commodo cillum eu nostrud deserunt laboris. Reprehenderit ex minim veniam culpa id esse voluptate sint in veniam. Dolore voluptate nulla officia anim mollit amet. Ad cillum ullamco dolor ex non reprehenderit tempor culpa do esse exercitation et. Ipsum reprehenderit tempor eu et id est in ad. Est esse esse cupidatat magna consectetur labore laborum est. Magna tempor voluptate id culpa aliqua eu exercitation duis occaecat excepteur ipsum reprehenderit.
+
+Fugiat proident esse labore laborum aute fugiat nulla occaecat. Veniam fugiat cupidatat veniam sunt do ipsum reprehenderit dolore et sit aute nostrud. Lorem aute ex elit adipisicing in ea Lorem officia. Aute sit voluptate deserunt in nulla Lorem do amet minim anim. Enim proident officia cupidatat officia veniam reprehenderit et dolore occaecat officia nulla. Enim dolore quis ullamco amet cupidatat do ea. Lorem tempor mollit qui aute cillum officia tempor cillum consectetur eiusmod duis dolore nisi proident.
