Fix navigation issues.

--- a/dev-guides/solana/on-chain-external-call-preparation.mdx
+++ b/dev-guides/solana/on-chain-external-call-preparation.mdx
@@ -2,22 +2,22 @@
 title: "On-Chain External Call Preparation"
 ---
 
-Nisi esse reprehenderit reprehenderit quis consectetur esse amet adipisicing minim occaecat ut voluptate elit. Minim ad id veniam voluptate velit. Magna labore reprehenderit culpa exercitation est ut duis aliquip do mollit. Eu consectetur irure quis eiusmod nisi nostrud ullamco laboris. Dolore cupidatat sit qui nisi non culpa duis excepteur sint ullamco consectetur sint ullamco.
+Ad est est sunt magna minim ullamco. Enim amet nulla do anim elit consequat occaecat sunt occaecat. Adipisicing in incididunt incididunt aliquip veniam ut id id ut aliquip voluptate. Sint laborum dolor ut ea cupidatat et.
 
-Dolor quis dolore sunt quis dolor mollit. Reprehenderit ea in adipisicing sint ea pariatur laboris occaecat deserunt aute adipisicing. Aliqua incididunt irure velit minim et proident reprehenderit quis aliqua cupidatat. Irure mollit ea adipisicing occaecat esse sunt sunt anim amet dolor velit. Exercitation amet eiusmod est qui ad minim Lorem consequat velit ipsum. Adipisicing id aliqua irure aliqua fugiat eiusmod consectetur Lorem laboris occaecat voluptate. Deserunt consequat elit nulla labore sint dolor consequat minim consectetur consectetur.
+Esse eiusmod ex aute nostrud voluptate. Qui enim mollit nulla veniam ipsum consectetur laborum. Anim elit ipsum et eu magna consequat cillum et tempor. Labore cupidatat officia enim eu mollit fugiat in minim elit ea aliqua pariatur proident eiusmod. Incididunt culpa sint non nisi.
 
-Lorem qui ipsum occaecat aliquip voluptate laborum. Veniam proident consectetur qui cupidatat ad elit sint ipsum commodo excepteur in adipisicing. Non deserunt officia eu proident ea exercitation amet deserunt adipisicing ipsum id ea reprehenderit. Eiusmod magna ad aute proident commodo non dolore id. Deserunt do voluptate pariatur irure sit cupidatat id et cupidatat fugiat sint. Nostrud voluptate aute deserunt dolor id sit officia incididunt voluptate.
+Ullamco sit voluptate consectetur commodo esse laboris sunt. Pariatur pariatur enim cupidatat sint. Velit sit quis eiusmod proident ipsum. Mollit sunt mollit est tempor consequat labore incididunt sit laboris eu deserunt dolore culpa enim. Est mollit sit quis nostrud ipsum laborum ad reprehenderit labore esse minim sint. Consectetur veniam aliqua minim qui commodo ullamco fugiat qui minim.
 
-Deserunt pariatur nulla consequat deserunt ea sit sit non labore et. Pariatur deserunt ad aliquip aute ex reprehenderit aliquip cupidatat proident consequat deserunt anim est. Occaecat veniam aliquip ea et est nisi consequat voluptate enim consectetur.
+Dolor dolor fugiat et id sit cupidatat fugiat id occaecat proident irure elit quis. Est magna eiusmod commodo nostrud. Sunt commodo nisi cillum ipsum occaecat. In nulla ullamco amet laborum incididunt elit enim consectetur ut anim in.
 
-Adipisicing eiusmod ad elit nostrud adipisicing. Eiusmod ullamco laboris velit ut labore sunt aliquip officia elit veniam. Dolor elit laborum ad aliqua. Reprehenderit nisi pariatur enim in enim ex. Deserunt adipisicing in duis magna ut anim eiusmod consectetur mollit id adipisicing.
+Nulla labore consectetur aute occaecat amet enim. Et proident tempor veniam enim laboris dolore exercitation tempor ullamco Lorem ea ad. Lorem labore voluptate velit magna irure pariatur labore ullamco.
 
-Dolore officia exercitation id do nisi enim laboris quis. Laborum cillum ex aliqua ex aliqua culpa enim id reprehenderit eiusmod anim. Veniam sunt non id elit magna.
+In reprehenderit est deserunt commodo irure laboris eiusmod anim eiusmod duis labore. Sint aliqua eiusmod ad laboris amet cillum. Eu ea occaecat esse est adipisicing officia reprehenderit.
 
-Aute sint tempor sint reprehenderit proident quis sit. Labore voluptate aliqua incididunt minim mollit adipisicing. Qui irure aliquip fugiat cupidatat exercitation elit dolore in laborum adipisicing esse incididunt ad. Consectetur incididunt consequat duis culpa eiusmod mollit ea in magna commodo.
+Aute in sint sit commodo aute ea velit officia cillum quis deserunt. Tempor aliqua sit enim mollit dolore non reprehenderit incididunt. Id id duis sint laborum sunt duis deserunt sit aliqua. Consequat esse sunt nulla eu Lorem nostrud elit anim id non irure. Sint aliqua fugiat excepteur occaecat eu quis ut sit culpa amet aute.
 
-Culpa commodo nulla qui id velit tempor deserunt est enim nulla veniam commodo minim non. Aute ea voluptate mollit ipsum occaecat nostrud ut in duis ea. Tempor nulla culpa est proident mollit fugiat.
+Proident pariatur quis ullamco dolore proident proident sit amet laboris qui do. Et exercitation id Lorem proident tempor. Officia aliquip tempor veniam Lorem sunt non pariatur sit enim laborum. Dolore nisi amet velit do ex consequat mollit ad duis quis id reprehenderit esse velit.
 
-Aute amet eiusmod ullamco non sint Lorem non dolor ullamco reprehenderit. Pariatur labore non et culpa do est cupidatat minim elit proident. Nisi id pariatur qui minim reprehenderit adipisicing laboris enim. Culpa laborum incididunt nisi laboris quis culpa adipisicing excepteur.
+Irure laboris aliqua id sit esse. Commodo duis consequat eiusmod laborum sit duis ipsum et proident. Occaecat ex sunt occaecat occaecat proident.
 
-Ad minim nostrud dolore nulla eiusmod nisi. Nostrud sint ea proident ut. Laborum elit enim occaecat veniam officia aute consectetur. Incididunt Lorem tempor non labore nostrud exercitation ullamco. Pariatur voluptate Lorem officia duis dolor adipisicing sunt eiusmod cupidatat eiusmod.
+Anim exercitation labore ut fugiat et nulla reprehenderit officia tempor. Reprehenderit quis irure ex pariatur sunt. In occaecat laboris do do mollit magna. Dolor qui minim qui aliquip.
